--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               My Notes
 description:         "Aratrik Pal's Notes"
-  #url:                 http://lanyon.getpoole.com
+url:                 http://lanyon.getpoole.com
 baseurl:             'https://ap2008.github.io/Notes'
 paginate:            5
 permalink:           pretty
