--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
 title:               My Notes
 description:         "Aratrik Pal's Notes"
-url:                 http://lanyon.getpoole.com
-baseurl:             'https://ap2008.github.io/Notes'
+url:                 http://ap2008.github.io/Notes
+#baseurl:             'https://ap2008.github.io/Notes'
 paginate:            5
 permalink:           pretty
 
