--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
 title:               My Notes
 description:         "Aratrik Pal's Notes"
-url:                 https://ap2008.github.io/
-#baseurl:             'https://ap2008.github.io/Notes'
+#url:                 https://ap2008.github.io/
+baseurl:             '/Notes'
 paginate:            5
 permalink:           pretty
 
