--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,6 @@ plugins:
 version:             1.1.0
 google_analytics_id: #UA-XXXX-Y
 markdown: Pandoc
+algolia:
+  application_id: 'IBCSC9FLK2'
+exclude: [vendor]
