--- a/_config.yml
+++ b/_config.yml
@@ -24,5 +24,5 @@ markdown: Pandoc
 algolia:
   application_id: 'IBCSC9FLK2'
   index_name: jekyll
-  vars: ["title", "excerpt", "date", "url", "categories", "tags"]
+  vars: ["title", "excerpt", "date", "url", "categories", "tags", "namet"]
 exclude: [vendor]
