--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ plugins:
 version:             1.1.0
 google_analytics_id: #UA-XXXX-Y
 markdown: Pandoc
-exclude: [vendor]
+exclude: [vendor, node_modules]
