--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,5 @@ plugins:
 version:             1.1.0
 google_analytics_id: #UA-XXXX-Y
 markdown: Pandoc
+pandoc: true
 exclude: [vendor, node_modules]
