--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,6 @@ google_analytics_id: #UA-XXXX-Y
 markdown: Pandoc
 pandoc: true
 exclude: [vendor, node_modules]
+pandoc:
+  extensions:
+    - mathjax
