--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 branches:
   only:
     # Change this to gh-pages if you're deploying using the gh-pages branch
-    - master
+    - source
 rvm:
  - 2.4
 addons:
