--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script: bundle exec rake site:deploy --quiet
 branches:
   only:
     # Change this to gh-pages if you're deploying using the gh-pages branch
-    - master
+    - source
 rvm:
  - 2.4
 
