--- a/_config.yml
+++ b/_config.yml
@@ -32,4 +32,4 @@ branch:               source
 
 # Jekyll source / destination
 source:               .
-destination:          _site
+destination:          ../gh-pages
